# Sentinel2_Farm_Monitoring

./: .gitignore  NDVI_MSAVI_EVI_NDMI_farm_S2_Hub.ipynb  Test_area_Gedaref.dbf  Test_area_Gedaref.geojson  Test_area_Gedaref.qmd  Test_area_Gedaref.shp  Test_area_Gedaref.shx  farm_polygon.geojson  get_indices_service.py  pyproject.toml
